test/files/neg/t2509-2.check
t2509-2.scala:27: error: ambiguous implicit values:
 both value xb in object Test of type => X[B,Int]
 and value xa in object Test of type => X[A,Boolean]
 match expected type X[B,U]
  val fb = f(new B)
            ^
one error found
